tests/baselines/reference/emitArrowFunctionWhenUsingArguments03.errors.txt
emitArrowFunctionWhenUsingArguments03.ts(2,15): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== emitArrowFunctionWhenUsingArguments03.ts (1 errors) ====
    var arguments;
    var a = () => arguments;
                  ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.